[project]
name = "MaterialManager"
version = "1.0.7"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "aerich[toml]>=0.8.1",
    "cryptography>=44.0.0",
    "fastapi>=0.115.6",
    "ldap3>=2.9.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "ruamel-yaml>=0.18.10",
    "tortoise-orm[asyncmy]>=0.23.0",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pylint>=3.3.7",
]
